--- a/pages/index-member.html
+++ b/pages/index-member.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-  <%- include('./layout/header'); -%>
+  <%- include('./layout/header-member'); -%>
 
   <section class="contenter-fluid">
     <div class="banner">
