finish the reason section

--- a/pages/index.html
+++ b/pages/index.html
@@ -1,18 +1,40 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-Hant-TW">
 
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>index</title>
+  <title>TravelTales - 每段旅程，都是一段故事</title>
 </head>
 
 <body>
   <%- include('./layout/header'); -%>
+  
+<section class="reason py-8 py-lg-12">
+  <h2 class="text-center fs-3 fs-lg-1 fw-bold pb-8">選擇我們的理由</h3>
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-4 mb-6 mb-lg-0">
+        <img class="img-fluid d-block mx-auto mb-4 mb-lg-6 img" src="../assets/images/reason-1.png" alt="Illustration of reason 1">
+        <h3 class="text-center text-primary-2 fs-5 fw-medium fw-lg-bold mb-4">創意無限的遊程選擇</h3>
+        <p class="text-center px-lg-4">TravelTales提供遊程選擇，滿足旅行偏好和興趣，讓每一次旅行都充滿驚喜。</p>
+      </div>
+      <div class="col-lg-4 mb-6 mb-lg-0">
+        <img class="img-fluid d-block mx-auto mb-4 mb-lg-6 img " src="../assets/images/reason-2.png" alt="Illustration of reason 2">
+        <h3 class="text-center text-primary-2 fs-5 fw-medium fw-lg-bold mb-4">個性化推薦與定制</h3>
+        <p class="text-center px-lg-4">TravelTales利用先進的算法和用戶數據，提供個性化的行程推薦和定制服務。</p>
+      </div>
+      <div class="col-lg-4 mb-6 mb-lg-0">
+        <img class="img-fluid d-block mx-auto mb-4 mb-lg-6 img" src="../assets/images/reason-3.png" alt="Illustration of reason 3">
+        <h3 class="text-center text-primary-2 fs-5 fw-medium fw-lg-bold mb-4">旅行故事的創造與分享</h3>
+        <p class="text-center px-lg-4">平台不僅僅是預訂工具，更是一個分享旅行故事的社區。</p>
+      </div>
+    </div>
+  </div>
+</section>
 
   <%- include('./layout/footer'); -%>
-
   <script type="module" src="../main.js"></script>
 </body>
 
