--- a/pages/index.html
+++ b/pages/index.html
@@ -12,7 +12,7 @@
   <%- include('./layout/header'); -%>
   
 <section class="reason py-8 py-lg-12">
-  <h2 class="text-center fs-3 fs-lg-1 fw-bold pb-8">選擇我們的理由</h3>
+  <h2 class="text-center fs-3 fs-lg-1 fw-bold pb-8 text-neutral-2">選擇我們的理由</h3>
   <div class="container">
     <div class="row">
       <div class="col-lg-4 mb-6 mb-lg-0">
