--- a/pages/index.html
+++ b/pages/index.html
@@ -100,7 +100,7 @@
               </span>
               <p>4.8</p>
             </div>
-            <div class="text-neutral-7 d-flex gap-2 border rounded-3 border-neutral-7 px-4 py-2 mb-6">
+            <div class="comment-btn text-neutral-7 d-flex gap-2 border rounded-3 border-neutral-7 px-4 py-2 mb-6">
               <span class="material-symbols-outlined">
                 sms
               </span>
