--- a/pages/index-member.html
+++ b/pages/index-member.html
@@ -26,59 +26,8 @@
      <div class="d-flex flex-column align-items-center justify-content-between px-lg-10 py-lg-13  py-8  position-relative">
       <img src="../assets/images/logo.png" width="147px" height="56px" alt="logo" class="object-fit-cover mb-lg-10 mb-8">
       <h1 class="display-3 fw-semibold text-white mb-lg-10 mb-8">每段旅程，都是一段故事</h1>
-      
-      <div class="d-lg-block d-none w-100 mb-10">
-        <div class="d-flex justify-content-around align-items-center">
-          <div class="container search bg-white rounded-pill p-2 shadow">
-            <ul class="row d-flex align-items-center">
-              <li class="col position-relative px-2 mx-2 border-end d-flex align-items-center"> 
-                <span class="material-icons">place</span>
-                <input type="text" placeholder="地點" class="form-content"> 
-                <span class="material-icons icon-more">expand_more</span>
-              </li>
-              <li class="col position-relative px-2 mx-2 border-end d-flex align-items-center"> 
-                <span class="material-icons">flight_takeoff</span>
-                <input type="text" placeholder="旅行開始時間" name="datepicker" class="form-control"> 
-                <span class="material-icons icon-more">expand_more</span>
-              </li>
-              <li class="col position-relative px-2 ms-2 d-flex align-items-center"> 
-                <span class="material-icons me-1">flight_land</span>
-                <input type="text" placeholder="旅行結束時間" name="datepicker2" class="form-control"> 
-                <span class="material-icons icon-more">expand_more</span>
-              </li>
-            </ul>
-          </div>
-          <div class="custom-btn-all ">
-            <button class="btn px-lg-7 py-lg-3 fs-5 rounded-pill">搜尋</button >
-          </div>  
-        </div>
-      </div>
-      <div class="d-lg-none d-block w-100 mb-10">
-        <div class="d-flex flex-column justify-content-around align-items-center">
-          <div class="container search mb-3">
-            <ul class="row d-flex bg-white rounded-5 shadow align-items-center p-4">
-              <li class="col-12 position-relative py-2 border-bottom d-flex align-items-center"> 
-                <span class="material-icons">place</span>
-                <input type="text" placeholder="地點" class="form-content"> 
-                <span class="material-icons icon-more">expand_more</span>
-              </li>
-              <li class="col-12 position-relative  py-2 border-bottom d-flex align-items-center"> 
-                <span class="material-icons">flight_takeoff</span>
-                <input type="text" placeholder="旅行開始時間" name="datepicker3" class="form-control"> 
-                <span class="material-icons icon-more">expand_more</span>
-              </li>
-              <li class="col-12 position-relative  py-2 d-flex align-items-center"> 
-                <span class="material-icons me-1">flight_land</span>
-                <input type="text" placeholder="旅行結束時間" name="datepicker4" class="form-control"> 
-                <span class="material-icons icon-more">expand_more</span>
-              </li>
-            </ul>
-          </div>
-          <div class="custom-btn-all w-100 row ">
-            <button class="btn col-12 fs-5 py-4 rounded-pill ">搜尋</button>
-          </div>  
-        </div>
-      </div> 
+      <!--datepicker ejs-->
+      <%- include('./layout/datepicker'); -%>
       <a href="#"><span class="material-icons custom-icon text-center " >keyboard_double_arrow_down</span></a>    
      </div>
     </div>
