--- a/pages/index.html
+++ b/pages/index.html
@@ -2,24 +2,8 @@
 <html lang="zh-Hant-TW">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>index</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,1,0" />
+  <%- include('./layout/head'); -%>
   <title>TravelTales - 每段旅程，都是一段故事</title>
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100..900&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,1,0" />
-
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <!--datepicker日曆套件-->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/vanillajs-datepicker@1.2.0/dist/css/datepicker.min.css">
-  <script src="https://cdn.jsdelivr.net/npm/vanillajs-datepicker@1.2.0/dist/js/datepicker-full.min.js"></script>
 </head>
 
 <body>
@@ -31,7 +15,7 @@
         <h1 class="display-3 fw-semibold text-white mb-lg-10 mb-8">每段旅程，都是一段故事</h1>
         <!--datepicker ejs-->
         <%- include('./layout/datepicker'); -%>
-        <a href="#"><span class="material-icons custom-icon text-center " >keyboard_double_arrow_down</span></a>    
+        <a href="#"><span class="material-symbols-outlined custom-icon text-center " >keyboard_double_arrow_down</span></a>    
       </div>
     </div>
   </section>
@@ -346,13 +330,13 @@
                     <p class="fw-medium mb-2 text-truncate">新北｜許家麵線｜親子體驗：流水麵線</p>
                     <div>
                       <p class="d-inline-block d-lg-block d-xl-inline-block fs-7 mb-0 me-3"><span
-                          class="material-icons span-star me-2">star</span>4.3</p>
+                          class="material-symbols-outlined span-star me-2">star</span>4.3</p>
                       <p class="d-inline-block d-lg-block d-xl-inline-block fs-7 mb-0"><span
-                          class="material-icons span-textsms me-2">textsms</span>560+</p>
+                          class="material-symbols-outlined span-textsms me-2">textsms</span>560+</p>
                     </div>
                   </div>
                   <div class="mx-2 mx-lg-4">
-                    <a href="#"><span class="material-icons span-arrow-right">arrow_forward_ios</span></a>
+                    <a href="#"><span class="material-symbols-outlined span-arrow-right">arrow_forward_ios</span></a>
                   </div>
                 </div>
               </li>
@@ -367,14 +351,14 @@
                     <p class="fw-medium mb-2 text-truncate">南投｜玉山2天1夜前峰團 · 2天2夜</p>
                     <div>
                       <p class="d-inline-block d-lg-block d-xl-inline-block fs-7 mb-0 me-3"><span
-                          class="material-icons span-star me-2">star</span>4.6</p>
+                          class="material-symbols-outlined span-star me-2">star</span>4.6</p>
                       <p class="d-inline-block d-lg-block d-xl-inline-block fs-7 mb-0"><span
-                          class="material-icons span-textsms me-2">textsms</span>400+
+                          class="material-symbols-outlined span-textsms me-2">textsms</span>400+
                       </p>
                     </div>
                   </div>
                   <div class="mx-2 mx-lg-4">
-                    <span class="material-icons span-arrow-right">arrow_forward_ios</span>
+                    <span class="material-symbols-outlined span-arrow-right">arrow_forward_ios</span>
                   </div>
                 </div>
               </li>
@@ -389,14 +373,14 @@
                     <p class="fw-medium mb-2 text-truncate">SNOWTOWN 雪樂地門票</p>
                     <div>
                       <p class="d-inline-block d-lg-block d-xl-inline-block fs-7 mb-0 me-3"><span
-                          class="material-icons span-star me-2">star</span>4.5</p>
+                          class="material-symbols-outlined span-star me-2">star</span>4.5</p>
                       <p class="d-inline-block d-lg-block d-xl-inline-block fs-7 mb-0"><span
-                          class="material-icons span-textsms me-2">textsms</span>350+
+                          class="material-symbols-outlined span-textsms me-2">textsms</span>350+
                       </p>
                     </div>
                   </div>
                   <div class="mx-2 mx-lg-4">
-                    <span class="material-icons span-arrow-right">arrow_forward_ios</span>
+                    <span class="material-symbols-outlined span-arrow-right">arrow_forward_ios</span>
                   </div>
                 </div>
               </li>
@@ -418,13 +402,13 @@
                     <p class="fw-medium mb-2 text-truncate">新北八里左岸｜SUP立槳｜沙洲蛤水麵</p>
                     <div>
                       <p class="d-inline-block d-lg-block d-xl-inline-block fs-7 mb-0 me-3"><span
-                          class="material-icons span-star me-2">star</span>4.8</p>
+                          class="material-symbols-outlined span-star me-2">star</span>4.8</p>
                       <p class="d-inline-block d-lg-block d-xl-inline-block fs-7 mb-0"><span
-                          class="material-icons span-textsms me-2">textsms</span>670+</p>
+                          class="material-symbols-outlined span-textsms me-2">textsms</span>670+</p>
                     </div>
                   </div>
                   <div class="mx-2 mx-lg-4">
-                    <a href="#"><span class="material-icons span-arrow-right">arrow_forward_ios</span></a>
+                    <a href="#"><span class="material-symbols-outlined span-arrow-right">arrow_forward_ios</span></a>
                   </div>
                 </div>
               </li>
@@ -439,14 +423,14 @@
                     <p class="fw-medium mb-2 text-truncate">台中國立自然科學博物館門票</p>
                     <div>
                       <p class="d-inline-block d-lg-block d-xl-inline-block fs-7 mb-0 me-3"><span
-                          class="material-icons span-star me-2">star</span>4.6</p>
+                          class="material-symbols-outlined span-star me-2">star</span>4.6</p>
                       <p class="d-inline-block d-lg-block d-xl-inline-block fs-7 mb-0"><span
-                          class="material-icons span-textsms me-2">textsms</span>420+
+                          class="material-symbols-outlined span-textsms me-2">textsms</span>420+
                       </p>
                     </div>
                   </div>
                   <div class="mx-2 mx-lg-4">
-                    <span class="material-icons span-arrow-right">arrow_forward_ios</span>
+                    <span class="material-symbols-outlined span-arrow-right">arrow_forward_ios</span>
                   </div>
                 </div>
               </li>
@@ -461,14 +445,14 @@
                     <p class="fw-medium mb-2 text-truncate">台中｜經典行程&高美濕地一日遊</p>
                     <div>
                       <p class="d-inline-block d-lg-block d-xl-inline-block fs-7 mb-0 me-3"><span
-                          class="material-icons span-star me-2">star</span>4.5</p>
+                          class="material-symbols-outlined span-star me-2">star</span>4.5</p>
                       <p class="d-inline-block d-lg-block d-xl-inline-block fs-7 mb-0"><span
-                          class="material-icons span-textsms me-2">textsms</span>350+
+                          class="material-symbols-outlined span-textsms me-2">textsms</span>350+
                       </p>
                     </div>
                   </div>
                   <div class="mx-2 mx-lg-4">
-                    <span class="material-icons span-arrow-right">arrow_forward_ios</span>
+                    <span class="material-symbols-outlined span-arrow-right">arrow_forward_ios</span>
                   </div>
                 </div>
               </li>
@@ -490,13 +474,13 @@
                     <p class="fw-medium mb-2 text-truncate">宜蘭張美阿嬤農場</p>
                     <div>
                       <p class="d-inline-block d-lg-block d-xl-inline-block fs-7 mb-0 me-3"><span
-                          class="material-icons span-star me-2">star</span>4.9</p>
+                          class="material-symbols-outlined span-star me-2">star</span>4.9</p>
                       <p class="d-inline-block d-lg-block d-xl-inline-block fs-7 mb-0"><span
-                          class="material-icons span-textsms me-2">textsms</span>560+</p>
+                          class="material-symbols-outlined span-textsms me-2">textsms</span>560+</p>
                     </div>
                   </div>
                   <div class="mx-2 mx-lg-4">
-                    <a href="#"><span class="material-icons span-arrow-right">arrow_forward_ios</span></a>
+                    <a href="#"><span class="material-symbols-outlined span-arrow-right">arrow_forward_ios</span></a>
                   </div>
                 </div>
               </li>
@@ -511,14 +495,14 @@
                     <p class="fw-medium mb-2 text-truncate">花蓮賞鯨｜多羅滿海洋賞鯨導覽體</p>
                     <div>
                       <p class="d-inline-block d-lg-block d-xl-inline-block fs-7 mb-0 me-3"><span
-                          class="material-icons span-star me-2">star</span>4.5</p>
+                          class="material-symbols-outlined span-star me-2">star</span>4.5</p>
                       <p class="d-inline-block d-lg-block d-xl-inline-block fs-7 mb-0"><span
-                          class="material-icons span-textsms me-2">textsms</span>400+
+                          class="material-symbols-outlined span-textsms me-2">textsms</span>400+
                       </p>
                     </div>
                   </div>
                   <div class="mx-2 mx-lg-4">
-                    <span class="material-icons span-arrow-right">arrow_forward_ios</span>
+                    <span class="material-symbols-outlined span-arrow-right">arrow_forward_ios</span>
                   </div>
                 </div>
               </li>
@@ -533,14 +517,14 @@
                     <p class="fw-medium mb-2 text-truncate">南投｜日月潭之美·海陸空體驗一日遊</p>
                     <div>
                       <p class="d-inline-block d-lg-block d-xl-inline-block fs-7 mb-0 me-3"><span
-                          class="material-icons span-star me-2">star</span>4.5</p>
+                          class="material-symbols-outlined span-star me-2">star</span>4.5</p>
                       <p class="d-inline-block d-lg-block d-xl-inline-block fs-7 mb-0"><span
-                          class="material-icons span-textsms me-2">textsms</span>500+
+                          class="material-symbols-outlined span-textsms me-2">textsms</span>500+
                       </p>
                     </div>
                   </div>
                   <div class="mx-2 mx-lg-4">
-                    <span class="material-icons span-arrow-right">arrow_forward_ios</span>
+                    <span class="material-symbols-outlined span-arrow-right">arrow_forward_ios</span>
                   </div>
                 </div>
               </li>
