- modify the text-truncate class in the rank section. - modify the img size settings in the rank section to resolve conflicts.

--- a/pages/index.html
+++ b/pages/index.html
@@ -326,7 +326,7 @@
                     <img class="rank-img object-fit-cover rounded-4" src="../assets/images/rank1-1.png"
                       alt="travel photos">
                   </div>
-                  <div class="text-truncate w-100">
+                  <div class="w-100 min-w-0">
                     <p class="fw-medium mb-2 text-truncate">新北｜許家麵線｜親子體驗：流水麵線</p>
                     <div>
                       <p class="d-inline-block d-lg-block d-xl-inline-block fs-7 mb-0 me-3"><span
@@ -347,7 +347,7 @@
                     <img class="rank-img object-fit-cover rounded-4" src="../assets/images/rank1-2.png"
                       alt="travel photos">
                   </div>
-                  <div class="text-truncate w-100">
+                  <div class="w-100 min-w-0">
                     <p class="fw-medium mb-2 text-truncate">南投｜玉山2天1夜前峰團 · 2天2夜</p>
                     <div>
                       <p class="d-inline-block d-lg-block d-xl-inline-block fs-7 mb-0 me-3"><span
@@ -369,7 +369,7 @@
                     <img class="rank-img object-fit-cover rounded-4" src="../assets/images/rank1-3.png"
                       alt="travel photos">
                   </div>
-                  <div class="text-truncate w-100">
+                  <div class="w-100 min-w-0">
                     <p class="fw-medium mb-2 text-truncate">SNOWTOWN 雪樂地門票</p>
                     <div>
                       <p class="d-inline-block d-lg-block d-xl-inline-block fs-7 mb-0 me-3"><span
@@ -398,7 +398,7 @@
                     <img class="rank-img object-fit-cover rounded-4" src="../assets/images/rank2-1.png"
                       alt="travel photos">
                   </div>
-                  <div class="text-truncate w-100">
+                  <div class="w-100 min-w-0">
                     <p class="fw-medium mb-2 text-truncate">新北八里左岸｜SUP立槳｜沙洲蛤水麵</p>
                     <div>
                       <p class="d-inline-block d-lg-block d-xl-inline-block fs-7 mb-0 me-3"><span
@@ -419,7 +419,7 @@
                     <img class="rank-img object-fit-cover rounded-4" src="../assets/images/rank2-2.png"
                       alt="travel photos">
                   </div>
-                  <div class="text-truncate w-100">
+                  <div class="w-100 min-w-0">
                     <p class="fw-medium mb-2 text-truncate">台中國立自然科學博物館門票</p>
                     <div>
                       <p class="d-inline-block d-lg-block d-xl-inline-block fs-7 mb-0 me-3"><span
@@ -441,7 +441,7 @@
                     <img class="rank-img object-fit-cover rounded-4" src="../assets/images/rank2-3.png"
                       alt="travel photos">
                   </div>
-                  <div class="text-truncate w-100">
+                  <div class="w-100 min-w-0">
                     <p class="fw-medium mb-2 text-truncate">台中｜經典行程&高美濕地一日遊</p>
                     <div>
                       <p class="d-inline-block d-lg-block d-xl-inline-block fs-7 mb-0 me-3"><span
@@ -470,7 +470,7 @@
                     <img class="rank-img object-fit-cover rounded-4" src="../assets/images/rank3-1.png"
                       alt="travel photos">
                   </div>
-                  <div class="text-truncate w-100">
+                  <div class="w-100 min-w-0">
                     <p class="fw-medium mb-2 text-truncate">宜蘭張美阿嬤農場</p>
                     <div>
                       <p class="d-inline-block d-lg-block d-xl-inline-block fs-7 mb-0 me-3"><span
@@ -491,7 +491,7 @@
                     <img class="rank-img object-fit-cover rounded-4" src="../assets/images/rank3-2.png"
                       alt="travel photos">
                   </div>
-                  <div class="text-truncate w-100">
+                  <div class="w-100 min-w-0">
                     <p class="fw-medium mb-2 text-truncate">花蓮賞鯨｜多羅滿海洋賞鯨導覽體</p>
                     <div>
                       <p class="d-inline-block d-lg-block d-xl-inline-block fs-7 mb-0 me-3"><span
@@ -513,7 +513,7 @@
                     <img class="rank-img object-fit-cover rounded-4" src="../assets/images/rank3-3.png"
                       alt="travel photos">
                   </div>
-                  <div class="text-truncate w-100">
+                  <div class="w-100 min-w-0">
                     <p class="fw-medium mb-2 text-truncate">南投｜日月潭之美·海陸空體驗一日遊</p>
                     <div>
                       <p class="d-inline-block d-lg-block d-xl-inline-block fs-7 mb-0 me-3"><span
