--- a/pages/index.html
+++ b/pages/index.html
@@ -540,6 +540,7 @@
   <script type="module" src="../main.js"></script>
   <script type="module" src="../assets/js/collect-love.js"></script>
   <script type="module" src="../assets/js/travel_swiper.js"></script>
+  <script type="module" src="../assets/js/filter_dorpdown.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-element-bundle.min.js"></script>
 </body>
