修正第二個輪播圖

--- a/pages/index.html
+++ b/pages/index.html
@@ -29,118 +29,120 @@
       <div class="swiper swiper-popular mb-6">
         <div class="swiper-wrapper pb-4 swiper-popular_wrapper">
           <div class="swiper-slide swiper-popular_slide">
-            <div class="popular_img popular_img_1 d-flex justify-content-between">
-              <div class="fs-6 text-white fw-medium bg-primary-2 popular_img-tag">日本</div>
-              <%- include('./layout/collect-love'); -%>
-            </div>
-            <div class="p-4 bg-white popular_content">
-              <h5 class="mb-2 fw-medium fs-5 text-neutral-1">大阪奇蹟郵輪</h5>
-              <div class="d-flex align-items-center mb-2">
-                <span class="star-icon">
-                    <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#FACC44"><path d="M0 0h24v24H0z" fill="none"/><path d="M0 0h24v24H0z" fill="none"/><path d="M12 17.27 18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"/></svg>
-                </span>
-                <span class="fw-medium fs-6 text-neutral-2">4.5</span>
+            <a href="./singleTrip.html" class="w-100">
+              <div class="popular_img popular_img_1 d-flex justify-content-between">
+                <div class="fs-6 text-white fw-medium bg-primary-2 popular_img-tag">日本</div>
+                <%- include('./layout/collect-love'); -%>
               </div>
-              <div class="d-flex justify-content-between align-items-center">
-                <p class="text-primary-2 popular_price fw-bold">NT$ 32,000 起</p>
-                <div class="popular_cart position-relative">
-                  <span class="material-symbols-outlined position-relative z-1">
-                    shopping_cart
+              <div class="p-4 bg-white popular_content">
+                <h5 class="mb-2 fw-medium fs-5 text-neutral-1">大阪奇蹟郵輪</h5>
+                <div class="d-flex align-items-center mb-2">
+                  <span class="star-icon">
+                      <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#FACC44"><path d="M0 0h24v24H0z" fill="none"/><path d="M0 0h24v24H0z" fill="none"/><path d="M12 17.27 18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"/></svg>
                   </span>
+                  <span class="fw-medium fs-6 text-neutral-2">4.5</span>
+                </div>
+                <div class="d-flex justify-content-between align-items-center">
+                  <p class="text-primary-2 popular_price fw-bold">NT$ 32,000 起</p>
+                  <div class="popular_cart position-relative">
+                    <span class="material-symbols-outlined position-relative z-1">
+                      shopping_cart
+                    </span>
+                  </div>
                 </div>
               </div>
-            </div>
+            </a>
           </div>
           <div class="swiper-slide swiper-popular_slide ">
-            <div class="d-flex justify-content-between">
+            <a href="./singleTrip.html" class="w-100">
+              <div class="position-relative">
+                <div class="position-absolute z-2 d-flex justify-content-between w-100">
+                  <div class="fs-6 text-white fw-medium bg-primary-2 popular_img-tag ">台中</div>
+                  <%- include('./layout/collect-love'); -%>
+                </div>
+              </div>
               <div class="swiper swiperPopular2">
-                <div class="swiper-wrapper">
-                  <div class="swiper-slide">
-                    <div class="popular_img popular_img_2 d-flex justify-content-between">
-                      <div class="fs-6 text-white fw-medium bg-primary-2 popular_img-tag">台中</div>
-                      <%- include('./layout/collect-love'); -%>
-                    </div>
+                <div class="swiper-wrapper ">
+                  <div class="swiper-slide popular_slide-second">
+                    <div class="popular_img popular_img_2"></div>
                   </div>
-                  <div class="swiper-slide">
-                    <div class="popular_img popular_img_3 d-flex justify-content-between">
-                      <div class="fs-6 text-white fw-medium bg-primary-2 popular_img-tag">台中</div>
-                      <%- include('./layout/collect-love'); -%>
-                    </div>
+                  <div class="swiper-slide popular_slide-second">
+                    <div class="popular_img popular_img_3"></div>
                   </div>
-                  <div class="swiper-slide">
-                    <div class="popular_img popular_img_4 d-flex justify-content-between">
-                      <div class="fs-6 text-white fw-medium bg-primary-2 popular_img-tag">台中</div>
-                      <%- include('./layout/collect-love'); -%>
-                    </div>
+                  <div class="swiper-slide popular_slide-second">
+                    <div class="popular_img popular_img_4"></div>
                   </div>
                 </div>
                 <div class="swiper-pagination swiper-pagination-popular-two"></div>
               </div>
-            </div>
-
-            <div class="p-4 bg-white popular_content">
-              <h5 class="mb-2 fw-medium fs-5 text-neutral-1">高美濕地 & 宮原眼科</h5>
-              <div class="d-flex align-items-center mb-2">
-                <span class="star-icon">
-                    <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#FACC44"><path d="M0 0h24v24H0z" fill="none"/><path d="M0 0h24v24H0z" fill="none"/><path d="M12 17.27 18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"/></svg>
-                </span>
-                <span class="fw-medium fs-6 text-neutral-2">4.5</span>
-              </div>
-              <div class="d-flex justify-content-between align-items-center">
-                <p class="text-primary-2 popular_price fw-bold">NT$ 600 起</p>
-                <div class="popular_cart position-relative">
-                  <span class="material-symbols-outlined position-relative z-1">
-                    shopping_cart
+              <div class="p-4 bg-white popular_content">
+                <h5 class="mb-2 fw-medium fs-5 text-neutral-1">高美濕地 & 宮原眼科</h5>
+                <div class="d-flex align-items-center mb-2">
+                  <span class="star-icon">
+                      <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#FACC44"><path d="M0 0h24v24H0z" fill="none"/><path d="M0 0h24v24H0z" fill="none"/><path d="M12 17.27 18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"/></svg>
                   </span>
+                  <span class="fw-medium fs-6 text-neutral-2">4.5</span>
+                </div>
+                <div class="d-flex justify-content-between align-items-center">
+                  <p class="text-primary-2 popular_price fw-bold">NT$ 600 起</p>
+                  <div class="popular_cart position-relative">
+                    <span class="material-symbols-outlined position-relative z-1">
+                      shopping_cart
+                    </span>
+                  </div>
                 </div>
               </div>
-            </div>
+            </a>
           </div>
           <div class="swiper-slide swiper-popular_slide">
-            <div class="popular_img popular_img_5 d-flex justify-content-between">
-              <div class="fs-6 text-white fw-medium bg-primary-2 popular_img-tag">日本</div>
-              <%- include('./layout/collect-love'); -%>
-            </div>
-            <div class="p-4 bg-white popular_content">
-              <h5 class="mb-2 fw-medium fs-5 text-neutral-1">日本環球影城</h5>
-              <div class="d-flex align-items-center mb-2">
-                <span class="star-icon">
-                    <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#FACC44"><path d="M0 0h24v24H0z" fill="none"/><path d="M0 0h24v24H0z" fill="none"/><path d="M12 17.27 18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"/></svg>
-                </span>
-                <span class="fw-medium fs-6 text-neutral-2">4.8</span>
+            <a href="./singleTrip.html" class="w-100">
+              <div class="popular_img popular_img_5 d-flex justify-content-between">
+                <div class="fs-6 text-white fw-medium bg-primary-2 popular_img-tag">日本</div>
+                <%- include('./layout/collect-love'); -%>
               </div>
-              <div class="d-flex justify-content-between align-items-center">
-                <p class="text-primary-2 popular_price fw-bold">NT$ 3,500 起</p>
-                <div class="popular_cart position-relative">
-                  <span class="material-symbols-outlined position-relative z-1">
-                    shopping_cart
+              <div class="p-4 bg-white popular_content">
+                <h5 class="mb-2 fw-medium fs-5 text-neutral-1">日本環球影城</h5>
+                <div class="d-flex align-items-center mb-2">
+                  <span class="star-icon">
+                      <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#FACC44"><path d="M0 0h24v24H0z" fill="none"/><path d="M0 0h24v24H0z" fill="none"/><path d="M12 17.27 18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"/></svg>
                   </span>
+                  <span class="fw-medium fs-6 text-neutral-2">4.8</span>
+                </div>
+                <div class="d-flex justify-content-between align-items-center">
+                  <p class="text-primary-2 popular_price fw-bold">NT$ 3,500 起</p>
+                  <div class="popular_cart position-relative">
+                    <span class="material-symbols-outlined position-relative z-1">
+                      shopping_cart
+                    </span>
+                  </div>
                 </div>
               </div>
-            </div>
+            </a>
           </div>
           <div class="swiper-slide swiper-popular_slide">
-            <div class="popular_img popular_img_6 d-flex justify-content-between">
-              <div class="fs-6 text-white fw-medium bg-primary-2 popular_img-tag">歐洲</div>
-              <%- include('./layout/collect-love'); -%>
-            </div>
-            <div class="p-4 bg-white popular_content">
-              <h5 class="mb-2 fw-medium fs-5 text-neutral-1">4天3夜 克里穆圖火山</h5>
-              <div class="d-flex align-items-center mb-2">
-                <span class="star-icon">
-                    <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#FACC44"><path d="M0 0h24v24H0z" fill="none"/><path d="M0 0h24v24H0z" fill="none"/><path d="M12 17.27 18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"/></svg>
-                </span>
-                <span class="fw-medium fs-6 text-neutral-2">4.5</span>
+            <a href="./singleTrip.html" class="w-100">
+              <div class="popular_img popular_img_6 d-flex justify-content-between">
+                <div class="fs-6 text-white fw-medium bg-primary-2 popular_img-tag">歐洲</div>
+                <%- include('./layout/collect-love'); -%>
               </div>
-              <div class="d-flex justify-content-between align-items-center">
-                <p class="text-primary-2 popular_price fw-bold">NT$ 32,000 起</p>
-                <div class="popular_cart position-relative">
-                  <span class="material-symbols-outlined position-relative z-1">
-                    shopping_cart
+              <div class="p-4 bg-white popular_content">
+                <h5 class="mb-2 fw-medium fs-5 text-neutral-1">4天3夜 克里穆圖火山</h5>
+                <div class="d-flex align-items-center mb-2">
+                  <span class="star-icon">
+                      <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#FACC44"><path d="M0 0h24v24H0z" fill="none"/><path d="M0 0h24v24H0z" fill="none"/><path d="M12 17.27 18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"/></svg>
                   </span>
+                  <span class="fw-medium fs-6 text-neutral-2">4.5</span>
+                </div>
+                <div class="d-flex justify-content-between align-items-center">
+                  <p class="text-primary-2 popular_price fw-bold">NT$ 32,000 起</p>
+                  <div class="popular_cart position-relative">
+                    <span class="material-symbols-outlined position-relative z-1">
+                      shopping_cart
+                    </span>
+                  </div>
                 </div>
               </div>
-            </div>
+            </a>
           </div>
         </div>
       </div>
