修正首頁_第二張輪播圖

--- a/pages/index.html
+++ b/pages/index.html
@@ -95,7 +95,7 @@
             </a>
           </div>
           <div class="swiper-slide swiper-popular_slide">
-            <a href="" class="w-100">
+            <a href="./singleTrip.html" class="w-100">
               <div class="popular_img popular_img_5 d-flex justify-content-between">
                 <div class="fs-6 text-white fw-medium bg-primary-2 popular_img-tag">日本</div>
                 <%- include('./layout/collect-love'); -%>
