--- a/pages/index.html
+++ b/pages/index.html
@@ -9,13 +9,13 @@
 <body>
   <section class="banner">
     <%- include('./layout/header'); -%>
-    <div class="contenter-fluid z-3 ">
-      <div class="d-flex flex-column align-items-center justify-content-between px-lg-10 py-lg-13  py-8  position-relative">
+    <div class="contenter z-3 ">
+      <div class="d-flex flex-column align-items-center justify-content-between px-lg-10 py-lg-13 py-8 position-relative">
         <img src="../assets/images/logo.png" width="147px" height="56px" alt="logo" class="object-fit-cover mb-lg-10 mb-8">
         <h1 class="display-3 fw-semibold text-white mb-lg-10 mb-8">每段旅程，都是一段故事</h1>
         <!--datepicker ejs-->
         <%- include('./layout/datepicker'); -%>
-        <a href="#"><span class="material-symbols-outlined custom-icon text-center " >keyboard_double_arrow_down</span></a>    
+        <a href="#"><span class="material-symbols-outlined custom-icon text-center" >keyboard_double_arrow_down</span></a>    
       </div>
     </div>
   </section>
